--- a/faqs.html
+++ b/faqs.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+ 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -22,7 +22,6 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/bicon/css/bicon.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -49,10 +48,9 @@
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="#">Blog</a></li>
-              <li><a href="fag.html" class="active">F.A.Q.</a></li>
-              <li><a href="#">Portfolios</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">Testimonials</a></li>
+              <li><a href="faqs.html">F.A.Q.</a></li>
+              <li><a href="portfolio.html">Portfolios</a></li>
+              <li><a href="testimonials.html" class="active">Testimonials</a></li>
               </li>
             </ul>
           </li>
@@ -277,22 +275,22 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Events</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Sponsorship / Donations</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolios</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">FAQs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design / Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">UI/UX Designs</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Marketing</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Mobile Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
           </ul>
         </div>
 
