--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
           <li><a href="contact.html">Contact Us</a></li>
           <li><a href="join.html">Join US</a></li>
         </ul>
-        <i class="mobile-nav-toggle bi-x navbar-toggler collapse.navbar-collapse"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-github"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
     </div>
@@ -279,22 +280,22 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Events</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Sponsorship / Donations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolios</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">FAQs</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design / Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">UI/UX Designs</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Mobile Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
             </ul>
           </div>
 
