--- a/testimonials.html
+++ b/testimonials.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+ 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -263,22 +263,22 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Events</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Sponsorship / Donations</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolios</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">FAQs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="events.html">Events</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Sponsorship / Donations</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Portfolios</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="faqs.html">FAQs</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design / Development</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">UI/UX Designs</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Digital Marketing</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Mobile Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
           </ul>
         </div>
 
