--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="index.html"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
