--- a/portfolio.html
+++ b/portfolio.html
@@ -61,9 +61,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
     </div>
